Fixed full screen  Document not active console error Made top bar toolbar configurable Made bottom bar visible in full screen mode as well

--- a/src/css/cosmattCompreWidget.css
+++ b/src/css/cosmattCompreWidget.css
@@ -213,13 +213,17 @@
   margin-left: -11px;
   margin-right: -10px;
 }
+.topToolbar-cosmatcomprewidget {
+  text-align: right;
+  margin-bottom: -15px;
+}
 .topfullscreen {
-  position: absolute !important;
+  /* position: absolute !important;
   right: 0;
-  top: 3px;
-  /* top:-12px; */
   margin-right: 30px;
-  padding-right: 0px;
+  padding-right: 0px; 
+  top: 3px;*/
+  /* top:-12px; */
 }
 .topfullscreen::active {
   position: absolute !important;
